--- a/ex16/src/index.html
+++ b/ex16/src/index.html
@@ -7,10 +7,7 @@
 <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched. </p> 
 
 
-
-<a href="#footer">Jump to Bottom</a>
-
-<p>View more <a href "https://www.pexels.com/">cat photos </a>cat photos</p>
+<p>View more <a href="https://www.pexels.com/">cat photos </a>cat photos</p>
 
 
 </main>
